--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ $RECYCLE.BIN/
 *.dll
 *.pdb
 
+# Zip file
+*.zip
+
 # =========================
 # Operating System Files
 # =========================
